# ESIBD-Explorer

./: .gitignore  .readthedocs.yaml  CLAUDE.md  EsibdExplorer.ifp  EsibdExplorer.py  LICENSE  MANIFEST.in  README.rst  build.bat  environment.yml  output.prof  pyproject.toml  ruff.toml  start.bat  start.sh  start_profiling.py  todo.sync-conflict-20250425-120256-SD456S5.txt
.claude/: ampr.md  chiller.md  pA.md  settings.local.json
Esibd/: EsibdCore.py  EsibdPlugins.py  __main__.py  explorer.py  plugins.py
conf/: Custom Config.ini  ISEG.ini  RBD.ini  config.h5  current.ini  settings.ini  testbeam.ini  voltage.ini
conf/old/: config.h5  current.ini  settings.ini  voltage.ini
docs/: ESIBD.bib  conf.py  index.rst  library.rst  requirements.txt
docs/pages/: acknowledgments.rst  changelog.html  changelog.rst  changelog.tex  esibd.pptx  esibd.rst  icons.rst  install.rst  plugin-development.rst  users-guide.rst
esibd/: __init__.py  __main__.py  config.py  const.py  core.py  extended.py  plugins.py  providePlugins.py  provide_plugins.py
esibd/controls/: __init__.py
esibd/controls/webcam/: webcam.py
esibd/devices/: __init__.py  com_helper.py  com_ports.json
esibd/devices/ampr12/: ampr12.py
esibd/devices/chiller/: chiller.py
esibd/devices/dmmr8/: dmmr8.py
esibd/devices/iseg/: iseg.py
esibd/devices/keithley/: keithley.py
esibd/devices/lakeshore335/: LS335.xcf  lakeshore.py
esibd/devices/maxigauge/: maxigauge.py
esibd/devices/mips/: mips.py
esibd/devices/ni9263/: ni9263.py
esibd/devices/omnicontrol/: omnicontrol.py
esibd/devices/pico/: pico.py
esibd/devices/pressure/: pressure.py
esibd/devices/rbd/: rbd.py
esibd/devices/rspd3303c/: RS.xcf  rspd3303c.py
esibd/devices/spa/: SPA.xcf  SPA120_cal.JSON  SPA_python_example.md  SPA_python_example.py  spa.py
esibd/devices/temperature/: temperature.py
esibd/devices/tic/: tic.py
esibd/displays/: __init__.py
esibd/displays/holo/: holo.py
esibd/displays/line/: line.py
esibd/displays/ms/: MS.xcf  ms.py
esibd/displays/pdb/: pdb.py
esibd/docs/: .buildinfo  genindex.html  index.html  library.html  objects.inv  py-modindex.html  search.html  searchindex.js
esibd/docs/.doctrees/: environment.pickle  index.doctree  library.doctree
esibd/docs/_sources/: index.rst.txt  library.rst.txt
esibd/docs/pages/: acknowledgments.html  changelog.html  esibd.html  icons.html  install.html  plugin-development.html  references.html  users-guide.html
esibd/examples/: __init__.py
esibd/examples/calculator/: calculator_plugin.py  calculator_standalone.py
esibd/examples/customDevice/: customDevice.py
esibd/examples/customPlugin/: customPlugin.py
esibd/examples/custom_device/: custom_device.py  custom_device2.py
esibd/examples/custom_plugin/: custom_plugin.py
esibd/media/: DeviceManager.xcf  PID.xcf  UCM.xcf  group.xcf  icon.pptx  record.xcf  scaleX.xcf  stack.xcf
esibd/plugins_internal/: __init__.py
esibd/plugins_internal/ISEG/: ISEG.py  ISEG.xcf
esibd/plugins_internal/KEITHLEY/: KEITHLEY.py
esibd/plugins_internal/MAXIGAUGE/: MAXIGAUGE.py  pfeiffer.xcf
esibd/plugins_internal/MIPS/: GAA.xcf  MIPS.py
esibd/plugins_internal/NI9263/: NI.xcf  NI9263.py
esibd/plugins_internal/OMNICONTROL/: OMNICONTROL.py
esibd/plugins_internal/PICO/: PICO.py  pico.xcf
esibd/plugins_internal/Pressure/: Pressure.py
esibd/plugins_internal/RBD/: RBD.py
esibd/plugins_internal/RSPD3303C/: RSPD3303C.py
esibd/plugins_internal/TIC/: TIC.py  edwards.xcf
esibd/plugins_internal/Temperature/: Temperature.py
esibd/plugins_internal/devices/: ISEG.py  Pressure.py  RBD.py  Temperature.py
esibd/plugins_internal/displays/: Displays.py  line.xcf  notes.txt
esibd/plugins_internal/examples/: Calculator.py  Custom.py  CustomDevice.py  calculator_standalone.py
esibd/plugins_internal/pressure/: Pressure.py
esibd/plugins_internal/scans/: GA.py  Scans.py  average.xcf  depo.xcf  interpolate.xcf  msScan.xcf  spectra.xcf
esibd/scans/: __init__.py
esibd/scans/ga/: ga.py  (+1 more)
manual/: ES-IBD_Explorer_Manual.tex
media/: about.html
modules/: .pylintrc  ES_IBD_Explorer.py  ES_IBD_Explorer.ui  ES_IBD_ISEG.py  ES_IBD_RBD.py  ES_IBD_configuration.py  ES_IBD_controls.py  ES_IBD_core.py  ES_IBD_functions.py  ES_IBD_management.py  GA.py  debugging.py  todo.txt
plugins/: ES_IBD_ISEG.py  ES_IBD_RBD.py  ES_IBD_scans.py  ES_IBD_widgets.py  custom.py  custom_device.py
plugins/devices/: ISEG.py  Pressure.py  RBD.py  Temperature.py  notes.txt
plugins/displays/: Displays.py
plugins/examples/: Custom.py  CustomDevice.py
plugins/scans/: GA.py  Scans.py
pyinstaller_hooks/: hook-importlib.py
setup/: create_env.bat  create_env.sh  create_esibd_offline.bat  esibd.yml  start_esibd_offline.bat  update_env.bat  update_env.sh
(+34 files in other folders)
