[project]
name = "esibd-explorer" # package name can include hyphens, module names should be lower case without hyphens.
requires-python = ">=3.11"
version = "0.6.9"
description = "A comprehensive data acquisition and analysis tool for Electrospray Ion-Beam Deposition experiments and beyond."
license = {file = "LICENSE"}
readme = "README.rst"
dependencies = [
	'numpy',
	'pathlib',
	'biopython',
	'scipy',
	'asteval',
	'configparser',
	'keyboard',
	'pyperclip',
	'python-socketio',
	'pyserial',
	'pywin32; sys_platform == "win32"',
	'Send2Trash',
	'matplotlib',
	'h5py',
	'configobj',
	'PyQt6',
	'PyQt6-WebEngine',
	'pyqtgraph==0.13.1',
	'PyOpenGL',
]

[metadata]
url = 'https://github.com/ioneater/ES-IBD_Explorer'
author = 'ioneater'
author_email = 'TODO'


[tool.setuptools]
packages = ["esibd"]
# include-package-data = true TODO delete
# This is already the default behaviour if you are using
# pyproject.toml to configure your build.
# You can deactivate that with `include-package-data = false`

[tool.setuptools.package-data]
esibd = ["icons/test.png", "plugins/*.py", "plugins/*.png", "plugins/*.wav", "media/*.png", "media/*.ico", "docs/*.png", "docs/*.html"]